(dirty) fix for z-index issue

--- a/less/new/modules/dialog.less
+++ b/less/new/modules/dialog.less
@@ -24,6 +24,7 @@
 
 .ventu-dialog {
     height: 340px;
+    position: relative;
 
     .ventu-dialog-slide-frame {
         height: 500px;
